--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
   </div>
 
-
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+  <script src="game.js"></script>
 </body>
 
 </html>
